--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ATX's Kinect V2 Green Screen" 
-        Width="1304" Height="1080" Background="Lime" Top="0" Left="0" Margin="0,0,0,0"
+        Width="1920" Height="1080" Background="Lime" Top="0" Left="0" Margin="0,0,0,0"
         Closing="MainWindow_Closing" ResizeMode="NoResize" WindowStyle="None" HorizontalAlignment="Left" VerticalAlignment="Top">
     <Window.Resources>
         <Style TargetType="{x:Type Image}">
@@ -11,8 +11,9 @@
         
     </Window.Resources>
     
-        <Viewbox Grid.Row="1" HorizontalAlignment="Center">
-            <Image Source="{Binding ImageSource}" Stretch="UniformToFill" RenderTransformOrigin="0.5,0.5" ClipToBounds="True" Width="1920" Height="1080" Margin="-308,0" >
+        <Canvas Grid.Row="1" HorizontalAlignment="Left">
+        <TextBlock x:Name="textBlock" TextWrapping="Wrap" FontSize="24" Panel.ZIndex="1" HorizontalAlignment="Right" ScrollViewer.VerticalScrollBarVisibility="Disabled" Width="1920" TextAlignment="Right" Cursor="None" Foreground="Red"/>
+        <Image Source="{Binding ImageSource}" Stretch="UniformToFill" RenderTransformOrigin="0.5,0.5" ClipToBounds="True" Width="1920" Height="1080" Margin="0,0" >
                 <Image.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform ScaleY="1" ScaleX="-1"/>
@@ -22,6 +23,6 @@
                     </TransformGroup>
                 </Image.RenderTransform>
             </Image>
-        </Viewbox>
+        </Canvas>
     
 </Window>
