Window height and width can be set in the .config file. If height is set to 0, it will automatically calculate the 16:9 ration from the width.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,19 +10,19 @@
         </Style>
         
     </Window.Resources>
-    
-        <Canvas Grid.Row="1" HorizontalAlignment="Left">
-        <TextBlock x:Name="textBlock" TextWrapping="Wrap" FontSize="24" Panel.ZIndex="1" HorizontalAlignment="Right" ScrollViewer.VerticalScrollBarVisibility="Disabled" Width="1920" TextAlignment="Right" Cursor="None" Foreground="Red"/>
-        <Image Source="{Binding ImageSource}" Stretch="UniformToFill" RenderTransformOrigin="0.5,0.5" ClipToBounds="True" Width="1920" Height="1080" Margin="0,0" >
-                <Image.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform ScaleY="1" ScaleX="-1"/>
-                        <SkewTransform AngleY="0" AngleX="0"/>
-                        <RotateTransform Angle="0"/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Image.RenderTransform>
-            </Image>
-        </Canvas>
-    
+
+    <Canvas x:Name="mainCanvas" Grid.Row="1">
+        <TextBlock x:Name="textBlock" TextWrapping="Wrap" FontSize="24" Panel.ZIndex="1" HorizontalAlignment="Right" ScrollViewer.VerticalScrollBarVisibility="Disabled" TextAlignment="Right" Cursor="None" Foreground="Red"/>
+        <Image x:Name="mainImage" Source="{Binding ImageSource}" RenderTransformOrigin="0.5,0.5" ClipToBounds="True" Margin="0,0" VerticalAlignment="Top" HorizontalAlignment="Left" >
+            <Image.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="1" ScaleX="-1"/>
+                    <SkewTransform AngleY="0" AngleX="0"/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Image.RenderTransform>
+        </Image>
+    </Canvas>
+
 </Window>
